	-- Implement more robustly accurate checkoutTimeout.
	   See https://github.com/swaldman/c3p0/pull/138 https://github.com/swaldman/c3p0/issues/137
	   Thanks François JACQUES!
	-- Add support for JDBC 4.3 beginRequest and endRequest methods.
	   See https://github.com/swaldman/c3p0/pull/170
	   Thanks Fernanda Meheust!
	-- Consider ourselves to be a wrapper for a thing if the thing we wrap itself declares itself
	   as the wrapper of that thing. See https://github.com/swaldman/c3p0/pull/149
	   Thanks François JACQUES!
	-- Fix rare ConcurrentModificationException in GooGooStatementCache when Connections are
	   closed. See https://github.com/swaldman/c3p0/pull/22
	   Thanks Mathilde Ffrench, Joel Caplin!
c3p0-0.10.0-pre1
	-- Fix doc comments no longer acceptable under persnicketty JDK 11
	-- Build with JDK 11 JVM (still emitting JDK 1.6 compatible sources)
	-- Get tests working under new mill build
	-- Reorganize to switch build from ant to mill
	-- Update to mchange-commons-java 0.2.20
c3p0-0.9.5.5
	-- Update docs to describe new com.mchange.v2.log.MLog.useRedirectableLoggers setting, implemented
	   in mchange-commons-java 0.2.19
	-- Update to mchange-commons-java 0.2.19
	-- Properly implement the JDBC 4.1 abort method. Thanks to Andrew Johnson for calling attention
	   to this issue.
c3p0-0.9.5.4
        -- Disabling entity expansions, as we did in v.0.9.5.3 turns out not to be sufficient to prevent all
	   XML-config parsing related attacks (if an attacker can control the XML config file that will be
	   parsed). We now make XML parsing much more restrictove by default, but allow users to revert to the
	   old, permissive pre-0.9.5.3 behavior by setting config property 'com.mchange.v2.c3p0.cfg.xml.usePermissiveParser'
	   to true. That property replaces and leaves deprecated the 'com.mchange.v2.c3p0.cfg.xml.expandEntityReferences'
	   property introduced on 0.9.5.3. Many thanks to Aaron Massey (amassey) at HackerOne for calling attention